# mrmx

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mrmx/: Cargo.toml  README.md
crates/mrmx-macros/: Cargo.toml  README.md
crates/mrmx-macros/src/: lib.rs  view.rs
crates/mrmx/src/: lib.rs
crates/mrmx/tests/: mod.rs
scripts/: update-readmes.nu
