[package]
name = "mrmx-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "mrmx_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
convert_case = "0.9.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.85"
quote = "1.0.36"
rstml = "0.12.0"
syn = "2.0.66"
tracing = "0.1.40"

[dev-dependencies]
mrmx = { path = "../mrmx" }
mrml = { version = "4.0.0", git = "https://github.com/JadedBlueEyes/mrml.git", branch = "jade/fragment", default-features = false, features = ["print"]}
