[package]
name = "mrmx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mrmx-macros = { path = "../mrmx-macros", optional = true}
mrml = { version = "4.0.0", git = "https://github.com/JadedBlueEyes/mrml.git", branch = "jade/fragment", default-features = false, features = ["print"]}

[dev-dependencies]
expect-test = "1.5.0"

mrmx-macros = { version = "0.1.0", path = "../mrmx-macros" }

[features]

default = ["macros"]
macros = ["mrmx-macros"]
